[package]
name = "rrshw"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[profile.release]
# or "z"
opt-level = "z"

[dependencies]
[target.'cfg(windows)'.dependencies]
windows = {version = "0.54.0" , features = ["Win32_Foundation","Win32_Security","Win32_Networking_WinSock","Win32_System_SystemInformation","Win32_System_Threading"]}